implement backup/restore

--- a/postgresql/config/config.env
+++ b/postgresql/config/config.env
@@ -5,3 +5,4 @@ POSTGRES_HOST_AUTH_METHOD=scram-sha-256
 POSTGRES_INITDB_ARGS=--auth-host=scram-sha-256
 PGPORT=5432
 PG_MAJOR=17
+POSTGRES_BACKUP_RETENTION=7
