add tests + fix upgrade path

--- a/nginx/Makefile
+++ b/nginx/Makefile
@@ -1,2 +1,8 @@
 PARENT_DIR := ..
 include $(PARENT_DIR)/Makefile
+
+.PHONY: test
+
+test: uninstall clean install
+	@echo "Running Nginx tests..."
+	curl -sSfL -I http://localhost/
