--- a/postgresql/config/config.env
+++ b/postgresql/config/config.env
@@ -3,6 +3,7 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_HOST_AUTH_METHOD=scram-sha-256
 POSTGRES_INITDB_ARGS=--auth-host=scram-sha-256
+POSTGRES_ARGS=-h 127.0.0.1
 PGPORT=5432
-PG_MAJOR=14
+PG_MAJOR=17
 POSTGRES_BACKUP_RETENTION=7
