--- a/nextcloud/config/config.env
+++ b/nextcloud/config/config.env
@@ -2,6 +2,9 @@
 ## Nextcloud Configuration Environment Variables
 ##
 
+# Nextcloud version
+NEXTCLOUD_MAJOR=31
+
 # Nextcloud domain configuration
 NEXTCLOUD_TRUSTED_DOMAINS=localhost
 OVERWRITEHOST=localhost
