--- a/nextcloud/config/redis.conf
+++ b/nextcloud/config/redis.conf
@@ -1,3 +1,10 @@
-requirepass nextcloud
+# Network settings
 port 6379
 bind 127.0.0.1
+
+# Set a password for Redis
+requirepass nextcloud
+
+# Hybrid mode (AOF + RDB)
+appendonly yes
+aof-use-rdb-preamble yes
