--- a/postgresql/Makefile
+++ b/postgresql/Makefile
@@ -1,3 +1,5 @@
+DEPENDENCIES = virtiofs
+
 TOP_LEVEL_DIR := ..
 include $(TOP_LEVEL_DIR)/Makefile.common
 
@@ -8,10 +10,10 @@ PG_MAJOR_LAST ?= 18
 test-set-pgmajor:
 	sed -i 's/^PG_MAJOR=.*/PG_MAJOR=$(PG_MAJOR_START)/' config/config.env
 
-$(TARGET_CHROOT)/var/lib/quadlets/postgresql/backup $(TARGET_CHROOT)/var/lib/quadlets/postgresql:
+$(TARGET_CHROOT)/var/lib/quadlets/postgresql:
 	install -m 0700 -o 70 -g 70 -d $@
 
-install-var: $(TARGET_CHROOT)/var/lib/quadlets/postgresql/backup
+install-var: $(TARGET_CHROOT)/var/lib/quadlets/postgresql
 
 test: uninstall clean test-set-pgmajor install
 	@echo "Running PostgreSQL integration tests..."; \
