--- a/nextcloud/config/config.env
+++ b/nextcloud/config/config.env
@@ -2,8 +2,10 @@
 ## Nextcloud Configuration Environment Variables
 ##
 
-# Nextcloud version
+# Major versions of all components
 NEXTCLOUD_MAJOR=31
+REDIS_MAJOR=8
+NGINX_MAJOR=1.20
 
 # Nextcloud domain configuration
 NEXTCLOUD_TRUSTED_DOMAINS=localhost
