--- a/nextcloud/tmpfiles.d/nextcloud.conf
+++ b/nextcloud/tmpfiles.d/nextcloud.conf
@@ -1,2 +1,3 @@
-d$ /run/quadlets/nextcloud 0700 82 82 -
-f+$ /run/quadlets/nextcloud/redis-session.ini 0600 82 82 -
+d$ /run/quadlets/nextcloud 0700 10008 10000 -
+f+$ /run/quadlets/nextcloud/redis-session.ini 0600 10008 10000 -
+d$ /var/lib/virtiofs/data/nextcloud 0700 10008 10000 -
